@startuml

title __P03_BUILD's Class Diagram__\n

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p03_build {
        abstract class com.baoge.designpattern.chuangjianxing.p03_build.Builder {
            {abstract} + buildBoard()
            {abstract} + buildDisplay()
            {abstract} + buildOs()
            {abstract} + create()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p03_build {
        class com.baoge.designpattern.chuangjianxing.p03_build.Client {
            {static} + main()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p03_build {
        abstract class com.baoge.designpattern.chuangjianxing.p03_build.Computer {
            # board : String
            # display : String
            # os : String
            + getBoard()
            + getDisplay()
            + setBoard()
            + setDisplay()
            {abstract} + setOs()
            # Computer()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p03_build {
        class com.baoge.designpattern.chuangjianxing.p03_build.Director {
            + Director()
            + construct()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p03_build {
        class com.baoge.designpattern.chuangjianxing.p03_build.MacBook {
            + setOs()
            # MacBook()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p03_build {
        class com.baoge.designpattern.chuangjianxing.p03_build.MacBookBuilder {
            + buildBoard()
            + buildDisplay()
            + buildOs()
            + create()
        }
      }
    }
  }
  

  com.baoge.designpattern.chuangjianxing.p03_build.Director o-- com.baoge.designpattern.chuangjianxing.p03_build.Builder : builder
  com.baoge.designpattern.chuangjianxing.p03_build.MacBook -up-|> com.baoge.designpattern.chuangjianxing.p03_build.Computer
  com.baoge.designpattern.chuangjianxing.p03_build.MacBookBuilder -up-|> com.baoge.designpattern.chuangjianxing.p03_build.Builder
  com.baoge.designpattern.chuangjianxing.p03_build.MacBookBuilder o-- com.baoge.designpattern.chuangjianxing.p03_build.Computer : computer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
